--- a/JJ2/Config/DefaultEngine.ini
+++ b/JJ2/Config/DefaultEngine.ini
@@ -26,7 +26,7 @@ r.ReflectionCaptureResolution=64
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
 r.ForwardShading=False
 r.VertexFoggingForOpaque=True
-r.AllowStaticLighting=False
+r.AllowStaticLighting=True
 r.NormalMapsForStaticLighting=False
 r.GenerateMeshDistanceFields=True
 r.DistanceFieldBuild.EightBit=False
@@ -358,6 +358,7 @@ XrApi=NativeOpenXR
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
+bGenerateNavigationOnlyAroundNavigationInvokers=False
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_VirtualRealityBP",NewGameName="/Script/JJ2")
