--- a/JJ2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/JJ2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -182,7 +182,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/isabe/Documents/GitHub/Jeavons_VR/JJ2/Content/VRTemplate/Maps
+UNR=V:/Jeavons_VR/JJ2/Content/VRTemplate/Maps
 BRUSH=V:/Jeavons_VR/JJ2/Content/
 FBX=V:/Jeavons_VR/JJ2/Content/
 FBXAnim=V:/Jeavons_VR/JJ2/Content/
@@ -3025,7 +3025,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -3424,8 +3424,8 @@ InterchangeProjectSettings="\"Object\" \"Object.ImportContent.ContentImportSetti
 DeveloperSettings="\"Object\" "
 Object="\"Object\" "
 NavModifierVolume="\"Object\" \"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMesh="\"Object\" "
-StreamableRenderAsset="\"Object\" "
+StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[16]\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[16]\" "
 StaticMeshActor="\"Object\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 AssetManagerSettings="\"Object\" \"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 AnimationSettings="\"Object\" \"Object.Compression.KeyEndEffectorsMatchNameArray\" \"Object.AnimationAttributes.BoneTimecodeCustomAttributeNameSettings\" \"Object.Mirroring.MirrorFindReplaceExpressions\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[0]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[1]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[2]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[3]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[4]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[5]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[6]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[7]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[8]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[9]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[10]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[11]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[12]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[13]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[14]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[15]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[16]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[17]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[18]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[19]\" \"Object.Mirroring.MirrorFindReplaceExpressions.MirrorFindReplaceExpressions[20]\" "
@@ -3818,7 +3818,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
