radio pickupable, the foliage reset itself so no shadows

--- a/JJ2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/JJ2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -155,6 +155,7 @@ SnapScaleEnabled=False
 CurrentRotGridSize=0
 GridEnabled=False
 CurrentScalingGridSize=6
+RotGridEnabled=False
 
 [EditorStartup]
 LastLevel=/Game/VRTemplate/Maps/Park
@@ -185,7 +186,7 @@ UNR=V:/Jeavons_VR/JJ2/Content/VRTemplate/Maps
 BRUSH=V:/Jeavons_VR/JJ2/Content/
 FBX=V:/Jeavons_VR/JJ2/Content/
 FBXAnim=V:/Jeavons_VR/JJ2/Content/
-GenericImport=../../../../../../Users/isabe/Downloads/bandstand.fbx
+GenericImport=V:/Mod5/JJ/picnic bench.fbx
 GenericExport=../../../../../../Users/S22194145/Downloads/S_Modular_Concrete_Median_Kit_vdqoedxdw_lod5_Var2_2.FBX
 GenericOpen=V:/Jeavons_VR/JJ2/Content/
 GenericSave=V:/Jeavons_VR/JJ2/Content/
@@ -1230,6 +1231,7 @@ MRUItem5=/Game/VRTemplate/Maps/VRTemplateMap
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [LandscapeEdit]
 PaintToolStrength=0.100000001
@@ -1268,7 +1270,7 @@ SceneComponent=
 Landscape=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
 BP_Sky_Sphere_C=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
 Icecreampot_C=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
-StaticMeshComponent=
+StaticMeshComponent=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
 FLash_C=PostProcessVolume.Rendering Features.Rendering Features
 LandscapeGizmoActiveActor=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
 LandscapeGizmoRenderComponent=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
@@ -1432,6 +1434,7 @@ BP_Daffodil_C=PostProcessVolume.Rendering Features.Rendering Features,EnhancedIn
 BP_Daffodil_2_C=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
 BP_Daffodil_3_C=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
 BP_Daffodil_4_C=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
+BP_Radio_C=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3144,6 +3147,16 @@ BP_Crownbearddead_C.TransformCommon=True
 BP_Crownbearddead_C.Networking=True
 BP_Daffodil_3_C.TransformCommon=True
 BP_Daffodil_3_C.Networking=True
+BP_Radio_C.Tick=True
+BP_Radio_C.Replication=True
+BP_Radio_C.Rendering=True
+BP_Radio_C.Collision=True
+BP_Radio_C.Actor=True
+BP_Radio_C.Input=True
+BP_Radio_C.HLOD=True
+BP_Radio_C.Physics=True
+BP_Radio_C.WorldPartition=True
+BP_Radio_C.Events=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -3266,7 +3279,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/MegaScans/Surfaces
+ContentBrowserTab1.SelectedPaths=/Game/MegaScans/3D_Plants/Rush_Daffodil_wftgfjaia/Foliage
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -3298,26 +3311,26 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Props/bandstand
-MRUItem1=/Game/Blueprints/Sign
-MRUItem2=/Game/VRSpectator/VRSpectator
-MRUItem3=/Game/Materials/Outline
-MRUItem4=/Game/Blueprints/BP_PooBin
-MRUItem5=/Game/Props/heron
-MRUItem6=/Game/Blueprints/Flowers/BP_Daffodil_4
-MRUItem7=/Game/Blueprints/Flowers/BP_Daffodil_3
-MRUItem8=/Game/Blueprints/Flowers/BP_Daffodil_2
-MRUItem9=/Game/Blueprints/Flowers/BP_Daffodil
-MRUItem10=/Game/Blueprints/Flowers/BP_Crownbearddead
-MRUItem11=/Game/Blueprints/Flowers/BP_Crownbeardalive
-MRUItem12=/Game/Blueprints/Flowers/BP_PoppyOrange
-MRUItem13=/Game/Blueprints/Flowers/BP_PoppyPink
-MRUItem14=/Game/Blueprints/Flowers/BP_PoppyRed_2
-MRUItem15=/Game/Blueprints/BP_PoppyRed
-MRUItem16=/Game/VRTemplate/Maps/Park
-MRUItem17=/Game/Audio/Fire_Cue
-MRUItem18=/Game/Audio/Fire_Cue_2
-MRUItem19=/Game/green
+MRUItem0=/Game/Blueprints/BP_Radio
+MRUItem1=/Game/brown
+MRUItem2=/Game/Props/picnic_bench
+MRUItem3=/Game/Props/bandstand
+MRUItem4=/Game/Blueprints/Sign
+MRUItem5=/Game/VRSpectator/VRSpectator
+MRUItem6=/Game/Materials/Outline
+MRUItem7=/Game/Blueprints/BP_PooBin
+MRUItem8=/Game/Props/heron
+MRUItem9=/Game/Blueprints/Flowers/BP_Daffodil_4
+MRUItem10=/Game/Blueprints/Flowers/BP_Daffodil_3
+MRUItem11=/Game/Blueprints/Flowers/BP_Daffodil_2
+MRUItem12=/Game/Blueprints/Flowers/BP_Daffodil
+MRUItem13=/Game/Blueprints/Flowers/BP_Crownbearddead
+MRUItem14=/Game/Blueprints/Flowers/BP_Crownbeardalive
+MRUItem15=/Game/Blueprints/Flowers/BP_PoppyOrange
+MRUItem16=/Game/Blueprints/Flowers/BP_PoppyPink
+MRUItem17=/Game/Blueprints/Flowers/BP_PoppyRed_2
+MRUItem18=/Game/Blueprints/BP_PoppyRed
+MRUItem19=/Game/VRTemplate/Maps/Park
 
 [AssetEditorToolkitTabLocation]
 /Game/MegaScans/Gravel_On_Soil_tltlcgckw/MI_Gravel_On_Soil_tltlcgckw_1K.MI_Gravel_On_Soil_tltlcgckw_1K=1
@@ -3515,6 +3528,9 @@ MRUItem19=/Game/green
 /Game/Blueprints/Flowers/BP_Daffodil_3.BP_Daffodil_3=1
 /Game/Blueprints/Flowers/BP_Daffodil_4.BP_Daffodil_4=1
 /Game/Props/heron.heron=1
+/Game/Props/picnic_bench.picnic_bench=1
+/Game/brown.brown=1
+/Game/Blueprints/BP_Radio.BP_Radio=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
@@ -3807,7 +3823,7 @@ UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 Landscape="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Lightmass.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 LandscapeProxy="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Lightmass.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-PartitionActor="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Lightmass.LightmassSettings\" \"Object.Collision.BodyInstance\" "
+PartitionActor="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 AssetViewerSettings="\"Object\" "
@@ -3940,6 +3956,8 @@ LandscapeLayerInfoObject="\"Object\" "
 Sign_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/BP_Radio.BP_Radio;
+RecentlyPlaced=/Game/Props/picnic_bench.picnic_bench;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Props/bin_r.bin_r;
 RecentlyPlaced=/Game/Props/bin.bin;
@@ -3958,8 +3976,6 @@ RecentlyPlaced=/Game/MegaScans/Decals/Scattered_Bark_vd0dfi1h/MI_Scattered_Bark_
 RecentlyPlaced=/Game/MegaScans/3D_Plants/Field_Poppy_vmcobd0ja/S_Field_Poppy_vmcobd0ja_Var14_lod1.S_Field_Poppy_vmcobd0ja_Var14_lod1;
 RecentlyPlaced=/Game/MegaScans/3D_Plants/Crownbeard_tefoajkr/S_Crownbeard_tefoajkr_Var8_lod1.S_Crownbeard_tefoajkr_Var8_lod1;
 RecentlyPlaced=/Game/MegaScans/3D_Plants/Crownbeard_tefoajkr/S_Crownbeard_tefoajkr_Var3_lod1.S_Crownbeard_tefoajkr_Var3_lod1;
-RecentlyPlaced=/Game/MegaScans/3D_Plants/Crownbeard_tefoajkr/S_Crownbeard_tefoajkr_Var7_lod1.S_Crownbeard_tefoajkr_Var7_lod1;
-RecentlyPlaced=/Game/MegaScans/3D_Plants/Crownbeard_tefoajkr/S_Crownbeard_tefoajkr_Var6_lod1.S_Crownbeard_tefoajkr_Var6_lod1;
 
 [PluginBrowser]
 InstalledPlugins=VarjoOpenXR
@@ -4005,7 +4021,7 @@ LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
 bImportAnimations=False
-bImportMaterials=True
+bImportMaterials=False
 bImportTextures=False
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
@@ -4326,7 +4342,7 @@ Contexts=(Name="SkeletalMeshEditor",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 
 [FoliageEdit]
-Radius=40
+Radius=100
 PaintDensity=0.100000001
 UnpaintDensity=1
 WindowPosition=-1,-1,284,400
