--- a/JJ2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/JJ2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -186,7 +186,7 @@ UNR=V:/Jeavons_VR/JJ2/Content/VRTemplate/Maps
 BRUSH=V:/Jeavons_VR/JJ2/Content/
 FBX=V:/Jeavons_VR/JJ2/Content/
 FBXAnim=V:/Jeavons_VR/JJ2/Content/
-GenericImport=V:/Mod5/JJ/picnic bench.fbx
+GenericImport=../../../../../../Users/S22194145/Desktop/untitled.fbx
 GenericExport=../../../../../../Users/S22194145/Downloads/S_Modular_Concrete_Median_Kit_vdqoedxdw_lod5_Var2_2.FBX
 GenericOpen=V:/Jeavons_VR/JJ2/Content/
 GenericSave=V:/Jeavons_VR/JJ2/Content/
@@ -3257,7 +3257,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Props
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3823,7 +3823,7 @@ UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 Landscape="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Lightmass.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 LandscapeProxy="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Lightmass.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-PartitionActor="\"Object\" "
+PartitionActor="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Lightmass.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 AssetViewerSettings="\"Object\" "
@@ -3956,6 +3956,8 @@ LandscapeLayerInfoObject="\"Object\" "
 Sign_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Props/untitled.untitled;
+RecentlyPlaced=/Game/Props/Heron.Heron;
 RecentlyPlaced=/Game/Blueprints/BP_Radio.BP_Radio;
 RecentlyPlaced=/Game/Props/picnic_bench.picnic_bench;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -3974,8 +3976,6 @@ RecentlyPlaced=/Game/Blueprints/Flowers/BP_PoppyRed.BP_PoppyRed;
 RecentlyPlaced=/Game/MegaScans/Decals/Scattered_Bark_vd0eaaah/MI_Scattered_Bark_vd0eaaah_1K.MI_Scattered_Bark_vd0eaaah_1K;
 RecentlyPlaced=/Game/MegaScans/Decals/Scattered_Bark_vd0dfi1h/MI_Scattered_Bark_vd0dfi1h_1K.MI_Scattered_Bark_vd0dfi1h_1K;
 RecentlyPlaced=/Game/MegaScans/3D_Plants/Field_Poppy_vmcobd0ja/S_Field_Poppy_vmcobd0ja_Var14_lod1.S_Field_Poppy_vmcobd0ja_Var14_lod1;
-RecentlyPlaced=/Game/MegaScans/3D_Plants/Crownbeard_tefoajkr/S_Crownbeard_tefoajkr_Var8_lod1.S_Crownbeard_tefoajkr_Var8_lod1;
-RecentlyPlaced=/Game/MegaScans/3D_Plants/Crownbeard_tefoajkr/S_Crownbeard_tefoajkr_Var3_lod1.S_Crownbeard_tefoajkr_Var3_lod1;
 
 [PluginBrowser]
 InstalledPlugins=VarjoOpenXR
@@ -4021,7 +4021,7 @@ LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
 bImportAnimations=False
-bImportMaterials=False
+bImportMaterials=True
 bImportTextures=False
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
@@ -4119,7 +4119,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -4171,7 +4171,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [Interchange_StackName__Assets__PipelineClassName_InterchangeGenericMaterialPipeline]
-bImportMaterials=True
+bImportMaterials=False
 MaterialImport=ImportAsMaterials
 ParentMaterial=/Game/Materials/Playground/M_equipment.M_equipment
 BaseNodeContainer=None
