--- a/JJ2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/JJ2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -186,7 +186,7 @@ UNR=V:/Jeavons_VR/JJ2/Content/VRTemplate/Maps
 BRUSH=V:/Jeavons_VR/JJ2/Content/
 FBX=V:/Jeavons_VR/JJ2/Content/
 FBXAnim=V:/Jeavons_VR/JJ2/Content/
-GenericImport=../../../../../../Users/S22194145/Desktop/untitled.fbx
+GenericImport=../../../../../../Users/S22194145/Desktop/try.fbx
 GenericExport=../../../../../../Users/S22194145/Downloads/S_Modular_Concrete_Median_Kit_vdqoedxdw_lod5_Var2_2.FBX
 GenericOpen=V:/Jeavons_VR/JJ2/Content/
 GenericSave=V:/Jeavons_VR/JJ2/Content/
@@ -1263,8 +1263,8 @@ FlattenMode=1
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.01 - Input Textures,MaterialEditorInstanceConstant.ParameterGroups.02- UV Controls,MaterialEditorInstanceConstant.ParameterGroups.03 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.04 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.05 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.06 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.07 - Normal,MaterialEditorInstanceConstant.ParameterGroups.08 - Parallax,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
-PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,
-BrushComponent=
+PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,
+BrushComponent=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,
 StaticMeshActor=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
 SceneComponent=
 Landscape=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
@@ -1388,8 +1388,8 @@ NavModifierVolume=PostProcessVolume.Rendering Features.Rendering Features,Enhanc
 SkyLight=EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,PostProcessVolume.Rendering Features.Rendering Features,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,
 PlayerStart=EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,PostProcessVolume.Rendering Features.Rendering Features,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
 CapsuleComponent=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
-DirectionalLight=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,
-TriggerBox=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,TriggerBox.Collision.Collision,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,
+DirectionalLight=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,
+TriggerBox=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,TriggerBox.Collision.Collision,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.TransformCommon.Transform,TriggerBox.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InstancedFoliageActor.TransformCommon.Transform,
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,
 LandscapeComponent=
 Poobin_lid_C=PostProcessVolume.Rendering Features.Rendering Features,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,Landscape.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,Grabbable_SmallCube_C.TransformCommon.Transform,StaticMeshComponent.TransformCommon.Transform,Landscape.TransformCommon.Transform,TriggerBox.Collision.Collision,
@@ -3257,7 +3257,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Props
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3311,26 +3311,26 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_Radio
-MRUItem1=/Game/brown
-MRUItem2=/Game/Props/picnic_bench
-MRUItem3=/Game/Props/bandstand
-MRUItem4=/Game/Blueprints/Sign
-MRUItem5=/Game/VRSpectator/VRSpectator
-MRUItem6=/Game/Materials/Outline
-MRUItem7=/Game/Blueprints/BP_PooBin
-MRUItem8=/Game/Props/heron
-MRUItem9=/Game/Blueprints/Flowers/BP_Daffodil_4
-MRUItem10=/Game/Blueprints/Flowers/BP_Daffodil_3
-MRUItem11=/Game/Blueprints/Flowers/BP_Daffodil_2
-MRUItem12=/Game/Blueprints/Flowers/BP_Daffodil
-MRUItem13=/Game/Blueprints/Flowers/BP_Crownbearddead
-MRUItem14=/Game/Blueprints/Flowers/BP_Crownbeardalive
-MRUItem15=/Game/Blueprints/Flowers/BP_PoppyOrange
-MRUItem16=/Game/Blueprints/Flowers/BP_PoppyPink
-MRUItem17=/Game/Blueprints/Flowers/BP_PoppyRed_2
-MRUItem18=/Game/Blueprints/BP_PoppyRed
-MRUItem19=/Game/VRTemplate/Maps/Park
+MRUItem0=/Game/Props/lamp_post
+MRUItem1=/Game/Blueprints/Sign
+MRUItem2=/Game/Blueprints/BP_Radio
+MRUItem3=/Game/brown
+MRUItem4=/Game/Props/picnic_bench
+MRUItem5=/Game/Props/bandstand
+MRUItem6=/Game/VRSpectator/VRSpectator
+MRUItem7=/Game/Materials/Outline
+MRUItem8=/Game/Blueprints/BP_PooBin
+MRUItem9=/Game/Props/heron
+MRUItem10=/Game/Blueprints/Flowers/BP_Daffodil_4
+MRUItem11=/Game/Blueprints/Flowers/BP_Daffodil_3
+MRUItem12=/Game/Blueprints/Flowers/BP_Daffodil_2
+MRUItem13=/Game/Blueprints/Flowers/BP_Daffodil
+MRUItem14=/Game/Blueprints/Flowers/BP_Crownbearddead
+MRUItem15=/Game/Blueprints/Flowers/BP_Crownbeardalive
+MRUItem16=/Game/Blueprints/Flowers/BP_PoppyOrange
+MRUItem17=/Game/Blueprints/Flowers/BP_PoppyPink
+MRUItem18=/Game/Blueprints/Flowers/BP_PoppyRed_2
+MRUItem19=/Game/Blueprints/BP_PoppyRed
 
 [AssetEditorToolkitTabLocation]
 /Game/MegaScans/Gravel_On_Soil_tltlcgckw/MI_Gravel_On_Soil_tltlcgckw_1K.MI_Gravel_On_Soil_tltlcgckw_1K=1
@@ -3700,9 +3700,9 @@ PrimType=1
 
 [DetailPropertyExpansion]
 LightmassImportanceVolume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object\" \"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object\" \"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PostProcessVolume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object\" \"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InterchangeProjectSettings="\"Object\" \"Object.ImportContent.ContentImportSettings\" \"Object.ImportContent.ContentImportSettings.PipelineStacks\" \"Object.ImportContent.ContentImportSettings.DefaultPipelineStackOverride\" \"Object.ImportContent.ContentImportSettings.ShowPipelineStacksConfigurationDialogOverride\" \"Object.ImportIntoLevel.SceneImportSettings\" \"Object.ImportIntoLevel.SceneImportSettings.PipelineStacks\" \"Object.Generic.Generic|ImportSettings\" "
 DeveloperSettings="\"Object\" "
@@ -3956,6 +3956,7 @@ LandscapeLayerInfoObject="\"Object\" "
 Sign_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Props/try.try;
 RecentlyPlaced=/Game/Props/untitled.untitled;
 RecentlyPlaced=/Game/Props/Heron.Heron;
 RecentlyPlaced=/Game/Blueprints/BP_Radio.BP_Radio;
@@ -3975,7 +3976,6 @@ RecentlyPlaced=/Game/Blueprints/Flowers/BP_PoppyRed_2.BP_PoppyRed_2;
 RecentlyPlaced=/Game/Blueprints/Flowers/BP_PoppyRed.BP_PoppyRed;
 RecentlyPlaced=/Game/MegaScans/Decals/Scattered_Bark_vd0eaaah/MI_Scattered_Bark_vd0eaaah_1K.MI_Scattered_Bark_vd0eaaah_1K;
 RecentlyPlaced=/Game/MegaScans/Decals/Scattered_Bark_vd0dfi1h/MI_Scattered_Bark_vd0dfi1h_1K.MI_Scattered_Bark_vd0dfi1h_1K;
-RecentlyPlaced=/Game/MegaScans/3D_Plants/Field_Poppy_vmcobd0ja/S_Field_Poppy_vmcobd0ja_Var14_lod1.S_Field_Poppy_vmcobd0ja_Var14_lod1;
 
 [PluginBrowser]
 InstalledPlugins=VarjoOpenXR
@@ -4005,6 +4005,7 @@ TextBlock.Appearance=False
 FoliageType_InstancedStaticMesh.Mesh=True
 FoliageType_InstancedStaticMesh.Painting=False
 FoliageType_InstancedStaticMesh.Placement=False
+DirectionalLight.Light=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -4119,7 +4120,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
