--- a/JJ2/JJ2.uproject
+++ b/JJ2/JJ2.uproject
@@ -17,6 +17,11 @@
 				"Android",
 				"HoloLens"
 			]
+		},
+		{
+			"Name": "AchievementSystem",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/d9f6e0a8c92f47db9e2fde6080bed630"
 		}
 	],
 	"TargetPlatforms": [
