--- a/JJ2/Saved/Config/WindowsEditor/Engine.ini
+++ b/JJ2/Saved/Config/WindowsEditor/Engine.ini
@@ -61,3 +61,8 @@ EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
 
+[/Script/AndroidPlatformEditor.AndroidSDKSettings]
+SDKPath=(Path="")
+NDKPath=(Path="")
+JavaPath=(Path="")
+
