--- a/JJ2/Saved/Config/WindowsEditor/Engine.ini
+++ b/JJ2/Saved/Config/WindowsEditor/Engine.ini
@@ -40,6 +40,7 @@ Paths=../../../Engine/Plugins/Media/MediaPlate/Content
 Paths=../../../Engine/Plugins/VirtualProduction/Takes/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
+Paths=../../../Engine/Plugins/Marketplace/AchievementSystem/Content
 
 [/Script/UnrealEd.UnrealEdEngine]
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/OpenWorld.OpenWorld",Map="/Engine/Maps/Templates/OpenWorld",DisplayName="Open World",Category="OpenWorld")
