benet made the flash work :D

--- a/JJ2/Config/DefaultEngine.ini
+++ b/JJ2/Config/DefaultEngine.ini
@@ -50,4 +50,5 @@ SoundCueCookQualityIndex=-1
 r.VirtualTextures=True
 r.Mobile.VirtualTextures=True
 r.MobileHDR=False
+r.DefaultFeature.AutoExposure=False
 
