flower, little, info achievements

--- a/JJ2/Saved/Config/WindowsEditor/Game.ini
+++ b/JJ2/Saved/Config/WindowsEditor/Game.ini
@@ -1,11 +1,11 @@
 [/Script/UnrealEd.ProjectPackagingSettings]
-PerPlatformBuildConfig=(("Android", PPBC_Development))
+PerPlatformBuildConfig=(("Android", PPBC_Development),("Windows", PPBC_Development))
 PerPlatformTargetFlavorName=(("Android", "Android_Multi"))
 PerPlatformBuildTarget=()
 Build=IfProjectHasCode
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="C:/Users/isabe/Desktop")
+StagingDirectory=(Path="C:/Users/S22194145/Desktop")
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
